--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   padding: 2rem;
   text-align: center;
 }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+  }
+  
 
 .logo {
   height: 6em;
