--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,26 @@
 body {
     font-family: 'Roboto Mono', monospace !important;
 }
+
+
+
+/* For browsers like Chrome, Safari */
+.custom-scroll::-webkit-scrollbar {
+    width: 4px; 
+    background-color: #A3D4F7; 
+  }
+  
+  .custom-scroll::-webkit-scrollbar-thumb {
+    background-color: #A3D4F7; 
+    border-radius: 10px; 
+  }
+  
+  .custom-scroll::-webkit-scrollbar-thumb:hover {
+    background-color: #A3D4F7; 
+  }
+  
+  /* work on firebox browser */
+  .custom-scroll {
+    scrollbar-width: thin; 
+    scrollbar-color: #A3D4F7 transparent; 
+  }
